crates/turnframe-understand/tests/snapshots/every_task_prompt_stays_within_its_size_budget__cross_check.snap
---
source: crates/turnframe-understand/tests/every_task_prompt_stays_within_its_size_budget.rs
expression: "format!(\"{context}\\n\\n=== schema ===\\n{schema}\")"
---
Last assistant message: «Trip 1 for Bianchi is open. What should it say?»

Message:
S1: [1]I [2]want [3]to [4]set [5]name

Acts understood:
- u1.a1 trip.set_name on Trip 1: value «Lisbon» (words 4 to 5)

=== schema ===
{"type":"object","additionalProperties":false,"required":["findings"],"properties":{"findings":{"type":"array","items":{"anyOf":[{"type":"object","additionalProperties":false,"required":["kind","words"],"properties":{"kind":{"type":"string","const":"missing"},"words":{"type":"object","additionalProperties":false,"required":["from","to"],"properties":{"from":{"type":"integer","minimum":1},"to":{"type":"integer","minimum":1}}}}},{"type":"object","additionalProperties":false,"required":["kind","act","argument","words"],"properties":{"kind":{"type":"string","const":"wrong_value"},"act":{"type":"string","enum":["u1.a1"]},"argument":{"type":"string","enum":["value"]},"words":{"type":"object","additionalProperties":false,"required":["from","to"],"properties":{"from":{"type":"integer","minimum":1},"to":{"type":"integer","minimum":1}}}}},{"type":"object","additionalProperties":false,"required":["kind","act","words"],"properties":{"kind":{"type":"string","const":"wrong_record"},"act":{"type":"string","enum":["u1.a1"]},"words":{"type":"object","additionalProperties":false,"required":["from","to"],"properties":{"from":{"type":"integer","minimum":1},"to":{"type":"integer","minimum":1}}}}},{"type":"object","additionalProperties":false,"required":["kind","act"],"properties":{"kind":{"type":"string","const":"not_asked"},"act":{"type":"string","enum":["u1.a1"]}}}]}}}}
