crates/turnframe-understand/tests/snapshots/every_task_prompt_stays_within_its_size_budget__locate.snap
---
source: crates/turnframe-understand/tests/every_task_prompt_stays_within_its_size_budget.rs
expression: "format!(\"{context}\\n\\n=== schema ===\\n{schema}\")"
---
Operation: trip.set_name: Name the trip.

Records:
- r1: Trip 1 · collecting · traveler: Bianchi
- r2: Trip 2 · collecting · traveler: Haddad
- by_name: a record the user names that is not listed
- ambiguous: more than one listed record fits

The card on screen is about r1.

Last assistant message: «Trip 1 for Bianchi is open. What should it say?»

Message:
S1: [1]I [2]want [3]to [4]set [5]name

Request: words 4 to 5, «set name»

=== schema ===
{"type":"object","additionalProperties":false,"required":["record","named"],"properties":{"record":{"type":"string","enum":["r1","r2","by_name","ambiguous"]},"named":{"anyOf":[{"type":"object","additionalProperties":false,"required":["from","to"],"properties":{"from":{"type":"integer","minimum":1},"to":{"type":"integer","minimum":1}}},{"type":"null"}]}}}
