crates/turnframe-understand/tests/snapshots/every_task_prompt_stays_within_its_size_budget__route.snap
---
source: crates/turnframe-understand/tests/every_task_prompt_stays_within_its_size_budget.rs
expression: "format!(\"{context}\\n\\n=== schema ===\\n{schema}\")"
---
Operations:
- trip.set_name: Name the trip.
- trip.set_travel_date: Set the day the traveler would rather fly.
- trip.add_extra: Add an extra to the trip.
- trip.open: Open a disruption case.
- trip.request_rebooking: Rebook the quoted flight.
- none: no operation listed does what is asked

Records:
- Trip 1 · collecting · traveler: Bianchi
- Trip 2 · collecting · traveler: Haddad

Last assistant message: «Trip 1 for Bianchi is open. What should it say?»

Message:
S1: [1]I [2]want [3]to [4]set [5]name

Request: words 4 to 5, «set name»

=== schema ===
{"type":"object","additionalProperties":false,"required":["operations"],"properties":{"operations":{"type":"array","items":{"type":"string","enum":["trip.set_name","trip.set_travel_date","trip.add_extra","trip.open","trip.request_rebooking","none"]}}}}
