crates/turnframe-understand/tests/snapshots/every_task_prompt_stays_within_its_size_budget__segment.snap
---
source: crates/turnframe-understand/tests/every_task_prompt_stays_within_its_size_budget.rs
expression: "format!(\"{context}\\n\\n=== schema ===\\n{schema}\")"
---
Workflows:
- trip: Open, fill in and rebook disruption cases.

Last assistant message: «Trip 1 for Bianchi is open. What should it say?»

Card on screen: «Rebook leg 1 of Trip 1 on AZ612?»
Options: confirm «Rebook», decline «Not now»

Message:
S1: [1]I [2]want [3]to [4]set [5]name

=== schema ===
{"type":"object","additionalProperties":false,"required":["analysis","units"],"properties":{"analysis":{"type":"string","description":"What the message asks for, in order, in a sentence or two."},"units":{"type":"array","items":{"anyOf":[{"type":"object","additionalProperties":false,"required":["kind","words","workflow"],"properties":{"kind":{"type":"string","const":"request"},"words":{"type":"object","additionalProperties":false,"required":["from","to"],"properties":{"from":{"type":"integer","minimum":1},"to":{"type":"integer","minimum":1}}},"workflow":{"type":"string","enum":["trip","unknown"]}}},{"type":"object","additionalProperties":false,"required":["kind","words","workflow","basis","continues_previous"],"properties":{"kind":{"type":"string","const":"question"},"words":{"type":"object","additionalProperties":false,"required":["from","to"],"properties":{"from":{"type":"integer","minimum":1},"to":{"type":"integer","minimum":1}}},"workflow":{"type":"string","enum":["trip","unknown"]},"basis":{"type":"string","enum":["current_committed_state","proposed_state","committed_state_after_turn","general_domain_knowledge"]},"continues_previous":{"type":"boolean"}}},{"type":"object","additionalProperties":false,"required":["kind","words","constraint"],"properties":{"kind":{"type":"string","const":"constraint"},"words":{"type":"object","additionalProperties":false,"required":["from","to"],"properties":{"from":{"type":"integer","minimum":1},"to":{"type":"integer","minimum":1}}},"constraint":{"type":"string","enum":["do_not_submit","do_not_delete","draft_only","ask_before_applying","apply_only_if","no_external_effects","keep_unchanged"]}}},{"type":"object","additionalProperties":false,"required":["kind","words","workflow","corrects"],"properties":{"kind":{"type":"string","const":"correction"},"words":{"type":"object","additionalProperties":false,"required":["from","to"],"properties":{"from":{"type":"integer","minimum":1},"to":{"type":"integer","minimum":1}}},"workflow":{"type":"string","enum":["trip","unknown"]},"corrects":{"anyOf":[{"type":"integer","minimum":1},{"type":"null"}]}}},{"type":"object","additionalProperties":false,"required":["kind","words","workflow","cancels"],"properties":{"kind":{"type":"string","const":"cancel"},"words":{"type":"object","additionalProperties":false,"required":["from","to"],"properties":{"from":{"type":"integer","minimum":1},"to":{"type":"integer","minimum":1}}},"workflow":{"type":"string","enum":["trip","unknown"]},"cancels":{"anyOf":[{"type":"integer","minimum":1},{"type":"null"}]}}},{"type":"object","additionalProperties":false,"required":["kind","words","option"],"properties":{"kind":{"type":"string","const":"card_answer"},"words":{"type":"object","additionalProperties":false,"required":["from","to"],"properties":{"from":{"type":"integer","minimum":1},"to":{"type":"integer","minimum":1}}},"option":{"type":"string","enum":["confirm","decline"]}}},{"type":"object","additionalProperties":false,"required":["kind","words","receipt"],"properties":{"kind":{"type":"string","const":"dispute"},"words":{"type":"object","additionalProperties":false,"required":["from","to"],"properties":{"from":{"type":"integer","minimum":1},"to":{"type":"integer","minimum":1}}},"receipt":{"type":"string","enum":["unknown"]}}},{"type":"object","additionalProperties":false,"required":["kind","words"],"properties":{"kind":{"type":"string","const":"provides_value"},"words":{"type":"object","additionalProperties":false,"required":["from","to"],"properties":{"from":{"type":"integer","minimum":1},"to":{"type":"integer","minimum":1}}}}},{"type":"object","additionalProperties":false,"required":["kind","words"],"properties":{"kind":{"type":"string","const":"chitchat"},"words":{"type":"object","additionalProperties":false,"required":["from","to"],"properties":{"from":{"type":"integer","minimum":1},"to":{"type":"integer","minimum":1}}}}}]}}}}
